# litestar-sphinx-theme

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: publish.yaml  publish.yml
litestar_sphinx_theme/: __init__.py  style.css
litestar_sphinx_theme/theme/: macros.html  theme.conf
litestar_sphinx_theme/theme/static/: litestar-sphinx-theme.css
starlite_sphinx_theme/: __init__.py  style.css
starlite_sphinx_theme/theme/: macros.html  main_nav.html  theme.conf
starlite_sphinx_theme/theme/static/: starlite-sphinx-theme.css
