[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
    { name = "Janek Nouvertné", email = "provinzkraut@posteo.de" },
]
maintainers = [
    { name = "Janek Nouvertné", email = "provinzkraut@posteo.de" },
    { name = "Jacob Coffee", email = "jacob@z7x.org" },
]
license = { text = "MIT" }
requires-python = ">=3.8,<4.0"
name = "litestar-sphinx-theme"
version = "0.2.0"
description = "A Sphinx theme for the Litestar organization"
keywords = ["litestar", "sphinx", "theme", "documentation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "pydata-sphinx-theme<1.0.0,>=0.13.3",
    "sphinx-design<1.0.0,>=0.3.0",
]

[project.entry-points."sphinx.html_themes"]
litestar_sphinx_theme = "litestar_sphinx_theme"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.4.0",
    "ruff>=0.0.292",
]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]

[tool.pdm.build]
includes = ["litestar_sphinx_theme", "CHANGELOG.md"]

[tool.pyright]
include = ["litestar_sphinx_theme"]

[tool.ruff]
select = ["ALL"]
ignore = [
    "E501", # pycodestyle line too long, handled by black
    "D100", # pydocstyle - missing docstring in public module
    "D101", # pydocstyle - missing docstring in public class
    "D102", # pydocstyle - missing docstring in public method
    "D103", # pydocstyle - missing docstring in public function
    "D104", # pydocstyle - missing docstring in public package
    "D105", # pydocstyle - missing docstring in magic method
    "D106", # pydocstyle - missing docstring in public nested class
    "D107", # pydocstyle - missing docstring in __init__
    "D202", # pydocstyle - no blank lines allowed after function docstring
    "D205", # pydocstyle - 1 blank line required between summary line and description
    "D415", # pydocstyle - first line should end with a period, question mark, or exclamation point
    "UP037", # pyupgrade - removes quotes from type annotation
    "A003", # flake8-builtins - class attribute {name} is shadowing a python builtin
    "B010" # flake8-bugbear - do not call setattr with a constant attribute value
]
line-length = 120
src = ["litestar_sphinx_theme"]
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"
